finish ui instructions